# workshop-ai-assissted-dev

./: .gitignore  ARTIFACT_OVERVIEW.md  GIT_NAVIGATION.md  LICENSE  MODULES.md  README.md  pyproject.toml
app/: main.py
commerce_platform/checkout/: eligibility.py
commerce_platform/profiles/: service.py
materials/module1/: expected_behavior.md  issue_brief.md  micro_transfer_pack_1.md  module1_teacher_guide_v1.md  prompt_exercises.md  sample_logs.txt
materials/module2/: README.md  anti_pattern_demo_pack.md  case_brief.md  evidence_pack.md  first_layer_quality_checklist.md  module2_task_pack.md  refactor_opportunity_note.md  short_term_vs_long_term_fix_note.md  style_consistency_checklist.md  symptom_matrix.md  test_gap_note.md  validation_order_template.md
materials/module3/: ai_assisted_convention_extraction_demo.md  ai_outsource_judgment_table.md  case_brief.md  local_convention_card_template.md  local_convention_eval_stack.md  local_convention_inventory_template.md  local_convention_trace_eval.md  module3_task_pack.md  shared_task_brief_template.md  style_consistency_team_template.md  template_pack_checklist.md  validation_handoff_template.md
module1/: ARTIFACT_OVERVIEW.md  README.md  pyproject.toml
module1/app/: main.py
module1/commerce_platform/: __init__.py
module1/tests/: test_profile_api.py
modules/module1/: README.md
modules/module2/: README.md
modules/module3/: README.md
tests/module1/: test_module1_demo_index.py
tests/module2/: test_module2_demo_index.py
tests/module2_sketches/: test_checkout_contract_guardrail_sketch.py  (+1 more)
(+33 files in other folders)
