[project]
name = "ai-collab-course-repo"
version = "0.1.0"
description = "Unified teaching repo for Module 1 and Module 2 of the AI collaboration development workshop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["commerce_platform", "app"]

[tool.hatch.build.targets.sdist]
include = [
  "commerce_platform",
  "app",
  "tests",
  "materials",
  "README.md",
  "pyproject.toml",
]
